# oxidized

./: Cargo.toml  oxidized.code-workspace
examples/e01_ping_bot/: Cargo.toml
examples/e01_ping_bot/src/: main.rs
src/: client.rs  error.rs  event.rs  http.rs  lib.rs  models.rs
src/http/: models.rs
src/http/models/: connection.rs
src/models/: channel.rs  context.rs  message.rs
