[package]
name = "oxidized"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
async-trait = "0.1"
lazy_static = "1.4"
uuid = "0.8"
tokio-native-tls = "0.3"
futures = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
features = ["log"]

[dependencies.reqwest]
features = ["json", "cookies"]
version = "0.11"

[dependencies.async-tungstenite]
version = "0.13"
features = ["tokio-runtime", "tokio-native-tls"]

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "rt-multi-thread"]
