[package]
name = "oxidized"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
async-trait = "0.1"
lazy_static = "1.4"
tokio-native-tls = "0.3"
futures = "0.3"
regex = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
features = ["log"]

[dependencies.reqwest]
features = ["json", "cookies"]
version = "0.11"

[dependencies.async-tungstenite]
version = "0.13"
features = ["tokio-runtime", "tokio-native-tls"]

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "rt-multi-thread"]
