[package]
name = "e01_ping_bot"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidized = { path = "../../" }
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "rt-multi-thread", "signal"]
